--- a/_data/data.yml
+++ b/_data/data.yml
@@ -111,48 +111,46 @@ projects:
         tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
 
 publications:
-    title: Publications
+    title: Certifications
     intro: |
-      You can list your publications in this section. Lorem ipsum dolor sit
-      amet, consectetur adipiscing elit. Vestibulum et ligula in nunc
-      bibendum fringilla a eu lectus.
+      Some of the certifications I've got.
     papers:
-      - title: The Art of Computer Programming
+      - title: Using Python to Interact with the Operating System
         link: "#"
-        authors: Donald E. Knuth
-        conference: Addison-Wesley, 1968
+        authors: Google
+        conference: "December 2020"
 
-      - title: "Genetic Programming III: Darwinian Invention &amp; Problem Solving"
-        link: "#"
-        authors: Koza, J.R., Andre, D., Bennett, F.H., Keane, M.A.
-        conference: "Morgan Kaufmann Publishers Inc., San Francisco, CA, USA, 1st edn. (1999)"
+      - title: "Crash Course on Python"
+        link: "https://www.coursera.org/account/accomplishments/verify/2W6BLEMMFZJP"
+        authors: Google
+        conference: "November 2020"
 
-      - title: A syntax directed compiler for Algol 60
+      - title: Front End Developer Track
         link: "#"
-        authors: Edgar T. Irons
-        conference: "Comm. ACM 4 (1961), 51–55"
+        authors: 1 Million Arab Coders Initiative
+        conference: "August 2018"
 
 skills:
     title: Skills &amp; Proficiency
 
     toolset:
-      - name: Python & Django
-        level: 98%
-
-      - name: Javascript & jQuery
-        level: 98%
-
-      - name: Angular
-        level: 98%
+      - name: Microsoft Office Suite
+        level: 100%
+      
+      - name: Photoshop
+        level: 40%
+       
+      - name: Python
+        level: 80%
 
       - name: HTML5 & CSS
-        level: 95%
-
-      - name: Ruby on Rails
-        level: 85%
-
-      - name: Sketch & Photoshop
-        level: 60%
+        level: 90%
+      
+      - name: Git
+        level: 70%
+        
+      - name: Linux system administration
+        level: 80%  
 
 footer: >
-    Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
+    Designed by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
