--- a/_data/data.yml
+++ b/_data/data.yml
@@ -13,6 +13,7 @@ sidebar:
 
     # Sidebar links
     email: hamzakattan@outlook.com
+    email2: hamzakat@protonmail.com
     phone: 001 620 2033117
     website: hamzakat.github.io #do not add http://
     linkedin: 
