--- a/_data/data.yml
+++ b/_data/data.yml
@@ -14,11 +14,12 @@ sidebar:
     # Sidebar links
     email: hamzakattan@outlook.com
     email2: hamzakat@protonmail.com
-    phone: 001 620 2033117
+    phone: 
     website: hamzakat.github.io #do not add http://
     linkedin: 
     github: hamzakat
     telegram: Kat963 # add your nickname without '@' sign
+    whatsapp: 001 620 2033117
     gitlab:
     bitbucket:
     twitter: 
