--- a/_data/data.yml
+++ b/_data/data.yml
@@ -18,7 +18,7 @@ sidebar:
     website: hamzakat.github.io #do not add http://
     linkedin: 
     github: hamzakat
-    telegram: # add your nickname without '@' sign
+    telegram: Kat963 # add your nickname without '@' sign
     whatsapp: 001 620 2033117
     gitlab:
     bitbucket:
